syntax = "proto3";

package helloworld;

service Crud {
  rpc CreateB (CreateBRequest) returns (CreateBReply) {} //comandos para broker
  rpc CreateD (CreateDRequest) returns (CreateDReply) {} //comandos para dns
  rpc ConnectC (ConnectCRequest) returns (ConnectCReply) {} //comandos para cliente
  rpc Get (GetRequest) returns (GetReply) {} //comandos para dns/cliente/broker
  rpc Merge (MergeRequest) returns (MergeReply) {} //merge(?)
  rpc PMerge (PMergeRequest) returns (PMergeReply) {} //propaga merge
}

//------------------------------
message CreateBRequest {
  string comandob = 1;
}

message CreateBReply {
  string ipb = 1;
}
//------------------------------

message CreateDRequest {
  string comandod = 1;
}

message CreateDReply {
  repeated int64 reloj = 1;
}
//------------------------------
message ConnectCRequest {
  string comandoc = 1;
}

message ConnectCReply {
  string ipc = 1;
  repeated int64 relojc = 2;
}
//------------------------------
message GetRequest {
  string comandoget = 1;
}

message GetReply {
  string ipget = 1;
  repeated int64 relojget = 2;
}
//------------------------------
message MergeRequest {
  string peticionlog = 1;
}

message MergeReply {
  bytes logresp = 1;
}
//------------------------------
message PMergeRequest {
  repeated string mergecito = 1;
}

message PMergeReply {
  string mresp = 1;
}